--- a/Documentation/Report/Parts/Toolchain.tex
+++ b/Documentation/Report/Parts/Toolchain.tex
@@ -34,6 +34,7 @@ Im Rahmen unseres Projekts wurde uns schnell klar, dass wir auf viele Tools ange
 \begin{figure}[hb]
 	\centering
 	\includegraphics[scale=.3]{Pictures/BalsamiqEntwurf}
+	\vspace{-.8cm}
 	\caption{Mockup-Entwurf mit Balsamiq\label{fig:BalsamiqEntwurf}}
 \end{figure}
 	
@@ -44,8 +45,8 @@ Im Rahmen unseres Projekts wurde uns schnell klar, dass wir auf viele Tools ange
 \begin{figure}[hb]
 	\centering
 	\includegraphics[scale=.3]{Pictures/IllustratorIcon}
-	\label{fig:IllustratorIcon}
-	\caption{Designen des KiBa-Icons mit Adobe Illustrator}
+	\vspace{-.8cm}
+	\caption{Designen des KiBa-Icons mit Adobe Illustrator\label{fig:IllustratorIcon}}
 \end{figure}
 
 	Zuletzt, für das Finalisieren von Grafiken und Inhalten, waren auch Adobe Illustrator und Photoshop von großer Bedeutung für uns. Wenn es beispielsweise um die Bearbeitung des Icons geht, welche in Abbildung \ref{fig:IllustratorIcon} ersichtlich ist, wären frei verfügbare Bibliotheken für unsere Zwecke am Ende nicht mehr ausreichend. Daher haben wir auf qualitative Eigenproduktionen gesetzt.
